# src/config/swaggerDocument.yaml
@@ -25,13 +25,13 @@ components:
             type: object
             properties:
               displayMessage:
-                type: string,
+                type: string
                 example: "Invalid arguments"
               statusCode:
                 type: integer
                 example: 400
               status:
-                type: string,
+                type: string
                 example: "failed"
     InternalServerError:
       description: Internal server error
@@ -41,13 +41,13 @@ components:
             type: object
             properties:
               displayMessage:
-                type: string,
+                type: string
                 example: "Internal server error"
               statusCode:
-                type: integer,
+                type: integer
                 example: 500
               status:
-                type: string,
+                type: string
                 example: "failed"
 
 security:
@@ -58,6 +58,8 @@ tags:
     description: Authentication and authorization endpoints
   - name: Users
     description: User management endpoints
+  - name: Transaction
+    description: Endpoints for managing transactions
 
 paths:
   /auth/signup:
@@ -385,7 +387,6 @@ paths:
                 date:
                   type: string
                   example: "01/12/2024"
-                  format: "DD/MM/YYYY"
                 description:
                   type: string
       responses:
@@ -422,9 +423,10 @@ paths:
       parameters:
         - name: id
           in: path
-          description: ID of the user
+          description: ID of the transaction
           required: true
-          type: string 
+          schema:
+            type: string
       requestBody:
         required: true
         content:
@@ -479,13 +481,19 @@ paths:
       summary: Get Transaction overview for a month
       security:
         - bearerAuth: []
-      params:
+      parameters:
         - name: month
           in: query
-          type: string
+          description: Transaction month
+          required: true
+          schema:
+            type: string
         - name: year
           in: query
-          type: string
+          description: Transaction Year
+          required: true
+          schema:
+            type: string
       responses:
         '200':
           description: Transaction data fetched
@@ -496,7 +504,7 @@ paths:
                 properties:
                   displayMessage:
                     type: string
-                    example: "Profile retrieved successfully"
+                    example: "Transaction data fetched successfully"
                   statusCode:
                     type: integer
                     example: 200
@@ -532,4 +540,106 @@ paths:
           $ref: '#/components/responses/InvalidArguments'
         '500':
           $ref: '#/components/responses/InternalServerError'
+
+  /transaction/list:
+    get:
+      tags: [Transaction]
+      summary: Get Transaction List
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: month
+          in: query
+          description: Transaction month
+          schema:
+            type: string
+        - name: year
+          in: query
+          description: Transaction year
+          schema:
+            type: string
+        - name: startDate
+          in: query
+          description: Start date of the transaction
+          schema:
+            type: string
+        - name: endDate
+          in: query
+          description: End date of the transaction
+          schema:
+            type: string
+        - name: type
+          in: query
+          description: Type of the transaction, either Income or Expense
+          required: true
+          schema:
+            type: string
+        - name: category
+          in: query
+          description: Category of the transaction
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Transactions fetched successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  displayMessage:
+                    type: string
+                    example: "Transaction fetched successfully"
+                  statusCode:
+                    type: integer
+                    example: 200
+                  status:
+                    type: string
+                    example: "success"
+                  data:
+                    type: object
+                    properties:
+                      totalAmount:
+                        type: number
+                        example: 10000
+                      transactionData:
+                        type: object
+                        properties:
+                          date:
+                            type: object
+                            properties:
+                              transactions:
+                                type: object
+                                properties:
+                                  amount:
+                                    type: number
+                                    example: 3000
+                                  type:
+                                    type: string
+                                    example: income
+                              total:
+                                type: number
+                                example: 4000
+        '401':
+          description: Unauthorized - invalid token
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  displayMessage:
+                    type: string
+                    example: "Invalid token"
+                  statusCode:
+                    type: integer
+                    example: 401
+                  status:
+                    type: string
+                    example: "failed"
+        '400':
+          $ref: '#/components/responses/InvalidArguments'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
+
 
