# src/routes/transactionRoutes.ts
@@ -1,9 +1,10 @@
 import express from 'express';
 import { validateUser } from '../middlewares/userValidation';
-import { createTransaction, getTransactionDataForMonth, updateTransaction } from '../controllers/transactionController';
+import { createTransaction, getTransactionDataForMonth, getTransactionsList, updateTransaction } from '../controllers/transactionController';
 
 export const transactionRoutes = express.Router();
 
 transactionRoutes.post("/create", validateUser, createTransaction);
 transactionRoutes.put("/update", validateUser, updateTransaction);
 transactionRoutes.get("/overview", validateUser, getTransactionDataForMonth)
+transactionRoutes.get("/list", validateUser, getTransactionsList)
